@@ -3,6 +3,7 @@ Changes in 4.1:
 
 Changes in 4.0.2:
 - Fix wrong X-KDE-PluginInfo-Name in ktzeroconfplugin.desktop
+- Fix crash caused by 0 pointer in webinterface plugin (242273)
 
 Changes in 4.0.1:
 - Make sure that the proper encoding is used when loading syndication filters
